[gd_scene load_steps=14 format=2]

[ext_resource path="res://Document/Document.gd" type="Script" id=1]
[ext_resource path="res://Page/Page.tscn" type="PackedScene" id=2]
[ext_resource path="res://Buttons/LeftButton.png" type="Texture" id=3]
[ext_resource path="res://Buttons/RightButton.png" type="Texture" id=4]
[ext_resource path="res://Theme/theme.tres" type="Theme" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 16, 16 )

[node name="Document" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PageLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -408.0
margin_right = 408.0

[node name="Page" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -408.0
margin_right = 408.0

[node name="MenuButtons" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 100.0

[node name="NewPage" type="Button" parent="MenuButtons"]
margin_right = 100.0
margin_bottom = 18.0
text = "Add Page"

[node name="Back" type="Button" parent="MenuButtons"]
margin_top = 22.0
margin_right = 100.0
margin_bottom = 40.0
text = "Back"

[node name="Save" type="Button" parent="MenuButtons"]
margin_top = 44.0
margin_right = 100.0
margin_bottom = 62.0
text = "Save Page"

[node name="HBoxContainer" type="HBoxContainer" parent="MenuButtons"]
margin_top = 66.0
margin_right = 100.0
margin_bottom = 84.0

[node name="Left" type="TextureButton" parent="MenuButtons/HBoxContainer"]
margin_right = 16.0
margin_bottom = 18.0
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
texture_disabled = SubResource( 4 )
stretch_mode = 3

[node name="IndexField" type="LineEdit" parent="MenuButtons/HBoxContainer"]
margin_left = 20.0
margin_right = 72.0
margin_bottom = 18.0

[node name="Right" type="TextureButton" parent="MenuButtons/HBoxContainer"]
margin_left = 76.0
margin_right = 92.0
margin_bottom = 18.0
texture_normal = SubResource( 5 )
texture_pressed = SubResource( 6 )
texture_hover = SubResource( 7 )
texture_disabled = SubResource( 8 )

[node name="Edit" type="Button" parent="MenuButtons"]
margin_top = 88.0
margin_right = 100.0
margin_bottom = 106.0
text = "Edit"

[node name="Remove" type="Button" parent="MenuButtons"]
margin_top = 110.0
margin_right = 100.0
margin_bottom = 128.0
text = "Remove"

[connection signal="pressed" from="MenuButtons/NewPage" to="." method="_on_NewPage_pressed"]
[connection signal="pressed" from="MenuButtons/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MenuButtons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="MenuButtons/HBoxContainer/Left" to="." method="_on_Left_pressed"]
[connection signal="text_entered" from="MenuButtons/HBoxContainer/IndexField" to="." method="_on_IndexField_text_entered"]
[connection signal="pressed" from="MenuButtons/HBoxContainer/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="MenuButtons/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="MenuButtons/Remove" to="." method="_on_Remove_pressed"]
